tests/snapshots/snapshot_fixtures__fixtures__printf_string_char_rejected.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/printf_string_char_rejected.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : s8i[4] = "hey" [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%s\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[4], "buf", align 1
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.buf : s8i[4]*
    copy %1, %3
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = cast(array_to_ptrdecay) %1 : s8i*
    %8 = call @printf(%6, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
