tests/snapshots/snapshot_fixtures__fixtures__ptr_len_const_bound.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/ptr_len_const_bound.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : s32i[4] = [2, 4, 6, 8] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[31] = "this is another number: %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum_items(%arg0: s32i*, %arg1: s32i, %arg2: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i, %arg2: s32i):
        %14 = alloca s32i*, "items", align 8
        %15 = alloca s32i, "printable", align 4
        %16 = alloca s32i, "length", align 4
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca s32i, "total", align 4
        store %arg0, %14
        store %arg1, %15
        store %arg2, %16
        %19 = get_global @printf : ((s8i*, ...) -> s32i)*
        %20 = get_global @.str.1 : s8i[31]*
        %21 = cast(array_to_ptrdecay) %20 : s8i*
        %22 = load %15 : s32i, align 4
        %23 = load %16 : s32i, align 4
        %24 = call @printf(%21, %22, %23) : s32i [all]
        %25 = const 0 : s32i
        store %25, %18, align 4
        scope {
            %28 = alloca s32i, "i", align 4
            %29 = const 0 : s32i
            store %29, %28, align 4
            for cond: {
                %39 = load %28 : s32i, align 4
                %40 = const 4 : s32i
                %41 = cmp lt %39, %40 : bool
                condition %41
            } step: {
                %30 = load %28 : s32i, align 4
                %31 = inc %30 : s32i [nsw]
                store %31, %28, align 4
                yield
            } do {
                scope {
                    %32 = load %28 : s32i, align 4
                    %33 = cast(integral) %32 : s64i
                    %34 = load %14 : s32i*, align 8
                    %35 = ptr_stride %34, %33 : s32i*
                    %36 = load %35 : s32i, align 4
                    %37 = load %18 : s32i, align 4
                    %38 = add %37, %36 : s32i [nsw]
                    store %38, %18, align 4
                    yield
                }
                yield
            }
            yield
        }
        %26 = load %18 : s32i, align 4
        store %26, %17
        %27 = load %17 : s32i
        return %27
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[4], "values", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.values : s32i[4]*
    copy %1, %3
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = cast(array_to_ptrdecay) %1 : s32i*
    %8 = const 5 : s32i
    %9 = const 4 : s32i
    %10 = call @sum_items(%7, %8, %9) : s32i [all]
    %11 = call @printf(%6, %10) : s32i [all]
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
