tests/snapshots/snapshot_fixtures__fixtures__ptr_len_nonadjacent.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/ptr_len_nonadjacent.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : s32i[4] = [2, 4, 6, 8] [cir_private, default, dso_local, constant]
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[28] = "this is another number: %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum_items(%arg0: s32i*, %arg1: s32i, %arg2: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i, %arg2: s32i):
        %14 = alloca s32i*, "items", align 8
        %15 = alloca s32i, "printable", align 4
        %16 = alloca s32i, "length", align 4
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca s32i, "total", align 4
        store %arg0, %14
        store %arg1, %15
        store %arg2, %16
        %19 = get_global @printf : ((s8i*, ...) -> s32i)*
        %20 = get_global @.str.1 : s8i[28]*
        %21 = cast(array_to_ptrdecay) %20 : s8i*
        %22 = load %15 : s32i, align 4
        %23 = call @printf(%21, %22) : s32i [all]
        %24 = const 0 : s32i
        store %24, %18, align 4
        scope {
            %27 = alloca s32i, "i", align 4
            %28 = const 0 : s32i
            store %28, %27, align 4
            for cond: {
                %38 = load %27 : s32i, align 4
                %39 = load %16 : s32i, align 4
                %40 = cmp lt %38, %39 : bool
                condition %40
            } step: {
                %29 = load %27 : s32i, align 4
                %30 = inc %29 : s32i [nsw]
                store %30, %27, align 4
                yield
            } do {
                scope {
                    %31 = load %27 : s32i, align 4
                    %32 = cast(integral) %31 : s64i
                    %33 = load %14 : s32i*, align 8
                    %34 = ptr_stride %33, %32 : s32i*
                    %35 = load %34 : s32i, align 4
                    %36 = load %18 : s32i, align 4
                    %37 = add %36, %35 : s32i [nsw]
                    store %37, %18, align 4
                    yield
                }
                yield
            }
            yield
        }
        %25 = load %18 : s32i, align 4
        store %25, %17
        %26 = load %17 : s32i
        return %26
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[4], "values", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.values : s32i[4]*
    copy %1, %3
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = cast(array_to_ptrdecay) %1 : s32i*
    %8 = const 5 : s32i
    %9 = const 4 : s32i
    %10 = call @sum_items(%7, %8, %9) : s32i [all]
    %11 = call @printf(%6, %10) : s32i [all]
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
