tests/snapshots/snapshot_fixtures__fixtures__ptr_member_store_unsafe.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/ptr_member_store_unsafe.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn bump(%arg1: s32i*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i*):
        %32 = alloca s32i*, "p", align 8
        store %arg1, %32
        %33 = load %32 : s32i*, align 8
        %34 = load %33 : s32i, align 4
        %35 = const 10 : s32i
        %36 = add %34, %35 : s32i [nsw]
        %37 = load %32 : s32i*, align 8
        store %36, %37, align 4
        return
}
fn init(%arg0: rec_outer*) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_outer*):
        %17 = alloca rec_outer*, "o", align 8
        store %arg0, %17
        %18 = const 1 : s32i
        %19 = load %17 : rec_outer*, align 8
        %20 = get_member %19[0] "buf" : rec_inner*
        %21 = get_member %20[0] "start" : s32i*
        store %18, %21, align 4
        %22 = const 2 : s32i
        %23 = load %17 : rec_outer*, align 8
        %24 = get_member %23[0] "buf" : rec_inner*
        %25 = get_member %24[1] "end" : s32i*
        store %22, %25, align 4
        %26 = const 0 : s32i
        %27 = load %17 : rec_outer*, align 8
        %28 = get_member %27[1] "error" : s32i*
        store %26, %28, align 4
        %29 = load %17 : rec_outer*, align 8
        %30 = get_member %29[0] "buf" : rec_inner*
        %31 = get_member %30[0] "start" : s32i*
        call @bump(%31) [all]
        return
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_outer, "o", align 4
    %2 = const 0 : s32i
    store %2, %0
    call @init(%1) [all]
    %3 = get_global @printf : ((s8i*, ...) -> s32i)*
    %4 = get_global @.str : s8i[10]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = get_member %1[0] "buf" : rec_inner*
    %7 = get_member %6[0] "start" : s32i*
    %8 = load %7 : s32i, align 4
    %9 = get_member %1[0] "buf" : rec_inner*
    %10 = get_member %9[1] "end" : s32i*
    %11 = load %10 : s32i, align 4
    %12 = get_member %1[1] "error" : s32i*
    %13 = load %12 : s32i, align 4
    %14 = call @printf(%5, %8, %11, %13) : s32i [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
